Fixes an issue where a hero hover is rendered behind the stat checkbox.

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -284,6 +284,7 @@
 
 .hero:hover {
     transform: scale( 2 );
+    z-index: 10;
 }
 
 .hero-icon-container {
